EBEGU-1626 -In EbeguParameterServiceBean duerfen wir die "vorherige" Gesuchsperiode nicht direkt aus dem Datum holen, da es nicht unbedingt eine Gesuchsperiode fuer z.B. datum.minusDays(1) geben muss. Es ist besser wenn wir die newestGesuchperiode nehmen und daraus das richtige Datum nehmen. So sind wir immer sicher, dass ein richtiges Datum genommen wird - Dafuer musste mandant-dateset.xml angepasst werden, da jetzt immer eine Gesuchsperiode und ein EbeguParameter gebraucht wird - Refactoring